2011-07-01 Jeremy Cribb <jcribb@email.unc.edu>
	* count_dlim.m: now accepts a "comment identifying" string, which tells it to ignore the remainder of the line.
	* gen_pub_plotfiles.m:  handles an error when an incorrect figure handle is used.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* gen_pub_plotfiles.m: updated calls for saving output files.
	* pretty_plot.m: commented out reported text for unknown condition.

2008-09-04  Ricky Spero <rspero@physics.unc.edu>
	* bin2d.m: added output that provides count.

2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* xlswrite.m: modified documentation to better match Mathworks convention.
	* bin2d.m: same.
	* clipper.m: same.
	* cols.m: same.
	* count_dlim: same.
	* drawlines.m: same.
	* figurelist.m: same.
	* gen_pub_plotfiles.m: same.
	* header.m: same.
	* legend_reorder.m: same.
	* make_3dfmAnalysis_docs.m: same.
	* mat2txt.m: same.
	* parse_csv_int.m: same.
	* pretty_plot.m: same.
	* rows.m: same.
	* select_data_in_box.m: same.
	* slopper.m: same.
	* unixUTC.m: same. 
	
2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* select_data_in_box.m: added awareness of several series rather than just selecting the first one.

2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* gen_pub_plotfiles.m:  added svg output.

2008-07-09  Jeremy Cribb <jcribb@email.unc.edu>
	- select_data_in_box.m: added series handle to output.

2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	see previous entry.  forgot to add files before commit.  done here.

2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.  now cvs ignores .asv and .mat files (for this folder)
	* select_data_in_box.m: added array indicies of selection as an output.
	* pretty_plot.m: added argument handling and generated two pretty_plot types, one for 'screen' and one for nicely rendered 'eps' figures (for publication).